--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,21 @@ Ahora su archivo CSS está asociado con Tailwind CSS en lugar de CSS normal y la
 @tailwind components;
 @tailwind utilities;
 
+.shadow-inner {
+  box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.2);
+}
+
+.imageLanding {
+  background-image: url("Electrica-mosconi-frontend/public/landing.svg");
+}
+
+#root {
+  width: 1280px;
+  margin: 0;
+  padding: 0;
+  /* text-align: center */
+}
+
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
